<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.aldomora.petagram.AcercaDe">
    <include android:id="@+id/miActionBar"
        layout="@layout/actionbar2">
    </include>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        >

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:cropToPadding="true"
            android:src="@drawable/dog_head"/>
        <TextView
            android:layout_marginTop="@dimen/spacing"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="@dimen/aboutSize"
            android:text="@string/app_name"
            android:textStyle="bold"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/version"
            android:textSize="@dimen/aboutSize"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/desarrollador"
            android:textSize="@dimen/textSize"/>
    </LinearLayout>

</LinearLayout>
