<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.aldomora.petagram.Contacto">

    <include android:id="@+id/miActionBar"
        layout="@layout/actionbar2">
    </include>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        android:layout_below="@+id/miActionBar">

        <android.support.design.widget.TextInputLayout
            android:id="@+id/nombreForm"
            android:layout_width="@dimen/editSize"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="@dimen/topMarg">

            <android.support.design.widget.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/name"
                android:textSize="@dimen/textSize"
                android:focusableInTouchMode="true" />

        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/emailForm"
            android:layout_width="@dimen/editSize"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="@dimen/interSpace"
            android:touchscreenBlocksFocus="false">

            <android.support.design.widget.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/mail"
                android:textSize="@dimen/textSize"
                android:focusableInTouchMode="true" />

        </android.support.design.widget.TextInputLayout>
        <android.support.design.widget.TextInputLayout
            android:id="@+id/msgForm"
            android:layout_width="@dimen/editSize"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:focusableInTouchMode="true">

            <android.support.design.widget.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/msg"
                android:textSize="@dimen/textSize"
                android:inputType="textMultiLine"/>

        </android.support.design.widget.TextInputLayout>

    </LinearLayout>
    <Button
        android:id="@+id/btnEnviar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:text="@string/button"/>
</RelativeLayout>
